--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -8,13 +8,27 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
 
+    <permission
+        android:name="com.vogella.android.locationapi.maps.permissions.MAPS_RECIEVE"
+        android:protectionLevel="signature" />
+        
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+    
+    <uses-permission android:name="com.vogella.android.locationapi.maps.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <meta-data android:name="com.google.android.gms.version"
-           android:value="@integer/google_play_services_version" />
+
         <activity
             android:name="com.example.followme.MapScreen"
             android:label="@string/app_name" >
@@ -24,6 +38,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="your_apikey" />
     </application>
 
 </manifest>
