--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,24 +11,23 @@
     <permission
         android:name="com.vogella.android.locationapi.maps.permissions.MAPS_RECIEVE"
         android:protectionLevel="signature" />
-        
+
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
-    
+
     <uses-permission android:name="com.vogella.android.locationapi.maps.permission.MAPS_RECEIVE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
         <activity
             android:name="com.example.followme.MapScreen"
             android:label="@string/app_name" >
@@ -38,10 +37,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
+
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="your_apikey" />
+
+        <activity
+            android:name="com.example.followme.LoginActivity"
+            android:label="@string/title_activity_login"
+            android:windowSoftInputMode="adjustResize|stateVisible" >
+        </activity>
     </application>
 
 </manifest>
